--- a/site/assets/themes/material/material-dark/compact/gordian/_variables.scss
+++ b/site/assets/themes/material/material-dark/compact/gordian/_variables.scss
@@ -1,7 +1,7 @@
-$primaryColor:#652af8 !default;
-$primaryTextColor:#ffffff !default;
-$accentColor:#9fa48a !default;
-$accentTextColor:#ffffff !default;
+$primaryColor:#ada6d3 !default;
+$primaryTextColor:#1d1c22 !default;
+$accentColor:#a7bc4f !default;
+$accentTextColor:#eeecf4 !default;
 
 @import '../../variables';
 @import '../../../_compact';
