--- a/site/assets/themes/material/material-light/compact/gordian/_variables.scss
+++ b/site/assets/themes/material/material-light/compact/gordian/_variables.scss
@@ -1,7 +1,7 @@
-$primaryColor:#4107d5 !default;
-$primaryTextColor:#ffffff !default;
-$accentColor:#71765b !default;
-$accentTextColor:#ffffff !default;
+$primaryColor:#332c59 !default;
+$primaryTextColor:#dedde3 !default;
+$accentColor:#9bb143 !default;
+$accentTextColor:#0d0b13 !default;
 
 @import '../../variables';
 @import '../../../_compact';
