--- a/site/assets/themes/material/material-dark/compact/gordian/_variables.scss
+++ b/site/assets/themes/material/material-dark/compact/gordian/_variables.scss
@@ -3,5 +3,12 @@ $primaryTextColor:#1d1c22 !default;
 $accentColor:#a7bc4f !default;
 $accentTextColor:#eeecf4 !default;
 
+:root {
+    --correct-color: var(--green-600);
+    --incorrect-color: var(--surface-50);
+    --not-guessed-color: var(--surface-0);
+    --guess-border: var(--surface-700);
+}
+
 @import '../../variables';
 @import '../../../_compact';
