--- a/site/assets/themes/material/material-dark/compact/gordian/_variables.scss
+++ b/site/assets/themes/material/material-dark/compact/gordian/_variables.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 $primaryColor:#ada6d3 !default;
 $primaryTextColor:#1d1c22 !default;
 $accentColor:#a7bc4f !default;
@@ -8,6 +10,11 @@ $accentTextColor:#eeecf4 !default;
     --incorrect-color: var(--surface-200);
     --not-guessed-color: var(--surface-50);
     --guess-border: var(--surface-700);
+    --background-color: linear-gradient(to top,
+        #{color.adjust($primaryColor, $lightness: -80%, $saturation: -15%)},
+        85%,
+        #{color.adjust($primaryColor, $lightness: -50%, $saturation: -15%)}
+        );
 }
 
 @import '../../variables';
