Format shown in Tag above puzzle

--- a/site/assets/themes/material/material-dark/compact/gordian/_variables.scss
+++ b/site/assets/themes/material/material-dark/compact/gordian/_variables.scss
@@ -2,8 +2,8 @@
 
 $primaryColor:#ada6d3 !default;
 $primaryTextColor:#1d1c22 !default;
-$accentColor:#a7bc4f !default;
-$accentTextColor:#eeecf4 !default;
+$accentColor:#f4dcee !default;
+$accentTextColor:#1d1c22 !default;
 
 :root {
     --correct-color: var(--green-600);
