--- a/site/assets/themes/material/material-light/compact/gordian/_variables.scss
+++ b/site/assets/themes/material/material-light/compact/gordian/_variables.scss
@@ -2,8 +2,8 @@
 
 $primaryColor:#332c59 !default;
 $primaryTextColor:#dedde3 !default;
-$accentColor:#9bb143 !default;
-$accentTextColor:#0d0b13 !default;
+$accentColor:#991b79 !default;
+$accentTextColor:#dedde3 !default;
 
 :root {
     --correct-color: var(--green-200);
