--- a/site/assets/theme-base/components/input/_inputtext.scss
+++ b/site/assets/theme-base/components/input/_inputtext.scss
@@ -3,11 +3,6 @@
     width: 100%;
 }
 
-.p-fluid .p-input-icon-left,
-.p-fluid .p-input-icon-right {
-    width: 100%;
-}
-
 // theme
 .p-inputtext {
     font-family: var(--font-family);
@@ -67,27 +62,15 @@
     color: $inputErrorBorderColor;
 }
 
-.p-input-icon-left > svg:first-of-type,
-.p-input-icon-left > i:first-of-type {
-    left: nth($inputPadding, 2);
-    color: $inputIconColor;
-}
-
-.p-input-icon-left > .p-inputtext {
+.p-icon-field-left > .p-inputtext {
     padding-left: nth($inputPadding, 2) * 2 + $primeIconFontSize;
 }
 
-.p-input-icon-left.p-float-label > label {
+.p-icon-field-left.p-float-label > label {
     left: nth($inputPadding, 2) * 2 + $primeIconFontSize;
 }
 
-.p-input-icon-right > svg:last-of-type,
-.p-input-icon-right > i:last-of-type {
-    right: nth($inputPadding, 2);
-    color: $inputIconColor;
-}
-
-.p-input-icon-right > .p-inputtext {
+.p-icon-field-right > .p-inputtext {
     padding-right: nth($inputPadding, 2) * 2 + $primeIconFontSize;
 }
 
